--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My 3 Dream Vacation Places</title>
-    <link rel="icon" href="">
+    <link rel="icon" href="./images/icons8-favicon-94.png">
 </head>
 <body>
     <h1>My 3 Dream Vacation Places</h1>
