updating the additional section of the homepage

--- a/index.html
+++ b/index.html
@@ -81,13 +81,17 @@
         </div>
     </div>
     <div class="more-information">
-        <h2>More Information regarding my dream travel destination</h2>
-        <h3>Introduction</h3>
+        <h2>
+            Additional Information
+        </h2>
+        <h3>1. Glacier National Park</h3>
         <p>The reason I picked the <mark>Glacier
             National Park</mark> because of the beautiful scenery and the wildlife that can be found there. The park is home to over 70 species of mammals and over 260 species of birds. The park is also home to over 1,000 different plant species. The park is also home to over 700 miles of hiking trails, so there is plenty to explore. The park is also home to over 130 named lakes and different campsites.
         </p>
+        <h3>2 .Great Barrier Reef</h3>
         <p>As one of the original Seven Natural Wonders of the World, the <mark>Great Barrier Reef</mark> holds a spot on every traveler's bucket list. Hugging the east coast of Queensland, Australia, the Great Barrier Reef extends from Cape York in the north all the way to Bundaberg in the south - more than 1,800 miles. With roughly 2,900 coral reefs, 600 islands and 1,500-plus species of fish, the reef leaves its 2 million annual visitors enchanted.</p>
-        <p><b>Japan </b> is a country that is rich in culture and history. <mark>Tokyo</mark> is the capital city of Japan and is one of the most popular tourist destinations in the world. The city is home to a number of famous landmarks, including the Tokyo Tower, the Imperial Palace, and the Meiji Shrine. The city is also home to a number of museums, galleries, and theaters, as well as a wide range of restaurants, bars, and shops.</p>
+        <h3>3. Japan</h3>
+        <p> is a country that is rich in culture and history. <mark>Tokyo</mark> is the capital city of Japan and is one of the most popular tourist destinations in the world. The city is home to a number of famous landmarks, including the Tokyo Tower, the Imperial Palace, and the Meiji Shrine. The city is also home to a number of museums, galleries, and theaters, as well as a wide range of restaurants, bars, and shops.</p>
     </div>
     <div class="newsletter">
         <h2>You can reach out to me by filling the form below</h2>
@@ -104,8 +108,8 @@
             <label for="area-of-interets">Where would you like visit?</label>
             <textarea name="area-of-interets" cols="30" rows="5"></textarea>
             <br></br>
-            <label for="send">Send</label>
-            <input type="submit" name="send">
+            <label for="send">Submit</label>
+            <input type="submit" name="Submit">
             <br>
         </form>
     </div>
