replacing Japan with Tokyo on the additional section

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         </p>
         <h3>2 .Great Barrier Reef</h3>
         <p>As one of the original Seven Natural Wonders of the World, the <mark>Great Barrier Reef</mark> holds a spot on every traveler's bucket list. Hugging the east coast of Queensland, Australia, the Great Barrier Reef extends from Cape York in the north all the way to Bundaberg in the south - more than 1,800 miles. With roughly 2,900 coral reefs, 600 islands and 1,500-plus species of fish, the reef leaves its 2 million annual visitors enchanted.</p>
-        <h3>3. Japan</h3>
+        <h3>3. Tokyo</h3>
         <p> is a country that is rich in culture and history. <mark>Tokyo</mark> is the capital city of Japan and is one of the most popular tourist destinations in the world. The city is home to a number of famous landmarks, including the Tokyo Tower, the Imperial Palace, and the Meiji Shrine. The city is also home to a number of museums, galleries, and theaters, as well as a wide range of restaurants, bars, and shops.</p>
     </div>
     <div class="newsletter">
