adding the additional features on the destinations

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
             <li>Beach towel</li>
             <li>Waterproof phone case</li>
             <li>Wear light clothes</li>
+            <li>Australian Dollar</li>
          </ol>
     </div>
 
@@ -77,12 +78,19 @@
                 <li>Portable charger</li>
                 <li>Travel adapter</li>
                 <li>Backpack</li> 
+                <li>Yen - This is the japan currency</li>
             </ol>
         </div>
     </div>
+    <div class="additional-features">
+        <h2>Additional Features</h2>
+        <p><b>1.</b> Each of the destinations has its own unique features that make them special. For example, Glacier National Park is home to over 70 species of mammals and over 260 species of birds. The park is also home to over 1,000 different plant species. The park is also home to over 700 miles of hiking trails, so there is plenty to explore. The park is also home to over 130 named lakes and different campsites.</p>
+        <p><b>2.</b> As one of the original Seven Natural Wonders of the World, the Great Barrier Reef holds a spot on every traveler's bucket list. Hugging the east coast of Queensland, Australia, the Great Barrier Reef extends from Cape York in the north all the way to Bundaberg in the south - more than 1,800 miles. With roughly 2,900 coral reefs, 600 islands and 1,500-plus species of fish, the reef leaves its 2 million annual visitors enchanted.</p>
+        <p><b>3.</b> Japan is a country that is rich in culture and history. Tokyo is the capital city of Japan and is one of the most popular tourist destinations in the world. The city is home to a number of famous landmarks, including the Tokyo Tower, the Imperial Palace, and the Meiji Shrine. The city is also home to a number of museums, galleries, and theaters, as well as a wide range of restaurants, bars, and shops.</p>
+    </div>
     <div class="more-information">
         <h2>
-            Additional Information
+            Introduction to the 3 Dream Vacation Places 
         </h2>
         <h3>1. Glacier National Park</h3>
         <p>The reason I picked the <mark>Glacier
@@ -97,15 +105,19 @@
         <h2>You can reach out to me by filling the form below</h2>
         <form name="newsletter">
             <label for="first-name">First Name:</label>
+            <br>
             <input type="text" name="first-name">
             <br></br>
             <label for="last-name">Last Name:</label>
+            <br>
             <input type="text" name="last-name">
             <br></br>
             <label for="email">Email:</label>
+            <br>
             <input type="email" name="email">
             <br></br>
             <label for="area-of-interets">Where would you like visit?</label>
+            <br>
             <textarea name="area-of-interets" cols="30" rows="5"></textarea>
             <br></br>
             <label for="send">Submit</label>
